changed pin and tee icons so user can see them better

--- a/spreadgolf.html
+++ b/spreadgolf.html
@@ -95,20 +95,26 @@ Note 10+ - 2930x1440
       inspector="url: https://cdn.jsdelivr.net/gh/aframevr/aframe-inspector@master/dist/aframe-inspector.min.js"
     >
     <a-assets>
-        <img src="./assets/images/golf/tee_1a1a1a.png" id="tee">
-        <img src="./assets/images/golf/pin_1a1a1a.png" id="pin">
+        <img src="./assets/images/golf/tee_1a3a1a.png" id="tee" width="100px" height="100px">
+        <img src="./assets/images/golf/pin_1a2a1a.png" id="pin" width="100px" height="100px">
+        <!-- <img src="./assets/images/traffic/security-gate_1a1a1a.png" id="accessGate" width="100px" height="100px"> -->
     </a-assets>
     <!-- Hole 1 -->
-    <a-entity gps-entity-place="latitude: 28.890963; longitude: -81.996129" scale="3 3 3">
+    <a-entity gps-entity-place="latitude: 28.847006; longitude: -82.003884" scale="3 3 3">
         <a-text value="Tee 1" scale="4 4 4" position="0 2 0" color="#ffffff"></a-text>
         <a-image src="#tee"></a-image>
     </a-entity>
     
-    <a-entity gps-entity-place="latitude: 28.886953; longitude: -81.997775" scale="3 3 3">
+    <a-entity gps-entity-place="latitude: 28.847687; longitude: -82.003206" scale="3 3 3">
         <a-text value="Pin 1" scale="4 4 4" position="0 2 0" color="#ffffff"></a-text>
         <a-image src="#pin"></a-image>
     </a-entity>
-    
+    <!-- Access Gate (test) -->
+<!--     <a-entity gps-entity-place="latitude: 28.848312; longitude: -82.004020" scale="3 3 3">
+        <a-text value="Access Gate" scale="4 4 4" position="0 2 0" color="#ffffff"></a-text>
+        <a-image src="#accessGate"></a-image>
+    </a-entity>
+     -->
     <!-- Hole 2 -->
          <a-entity gps-entity-place="latitude: 28.886473; longitude: -81.998529" scale="3 3 3">
             <a-text value="Tee 2" scale="4 4 4" position="0 2 0" color="#ffffff"></a-text>
