added windshield algo to body and a-scene

--- a/ar-spread.html
+++ b/ar-spread.html
@@ -35,7 +35,7 @@
 
     <title>WideSpread</title>
   </head>
-  <body style='margin: 0; overflow: hidden;'>
+  <body style='margin: 0; overflow: hidden; -webkit-transform: scaleX(-1); transform: scaleX(-1); backface-visibility: visible; background: black; opacity: 0.8;'>
     <!-- WideSpread Menu START -->
     <div id="top_menu">
       <div class="top-menu-container">
@@ -63,11 +63,156 @@
     </div>
 
 
-    <div id="bottom_menu">
-      <h1>WideSpread</h1>
-    </div>
+<!-- Contacts Start -->
+     <div class="contacts-container">
+    <div id="contacts">
+        <ul>
+            <li>
+                <div class="contact-card">
+                    <div class="contact-profile-image">
+                        <img src="./assets/images/profile/jonathan-olson_1a1a1a.jpg" alt="Jonny O">
+                    </div>
+                    <div class="contact-name"><h2>Jonny O</h2></div>
+                    <div class="contact-options">
+                                <a href="tel:3524468043"><i class="fas fa-phone"></i></a></div>
+                </div>
+            </li>
+            <li>
+                <div class="contact-card">
+                    <div class="contact-profile-image">
+                        <img src="./assets/images/profile/default_profile-img_1a1a1a.png" alt="Default User Avatar">
+                    </div>
+                    <div class="contact-name"><h2>Philip</h2></div>
+                    <div class="contact-options"><a href="tel:8609863430"><i class="fas fa-phone"></i></a></div>
 
-    <!-- WideSpread Menu END -->
+                </div>
+            </li>
+            <li>
+                <div class="contact-card">
+                    <div class="contact-profile-image">
+                        <img src="./assets/images/profile/default_profile-img_1a1a1a.png" alt="Default User Avatar">
+                    </div>
+                    <div class="contact-name"><h2>Lisa</h2></div>
+                    <div class="contact-options"><a href="tel:8609959532"><i class="fas fa-phone"></i></a></div>
+
+                </div>
+            </li>
+            <li>
+                <div class="contact-card">
+                    <div class="contact-profile-image">
+                        <img src="./assets/images/profile/clarice-wilson_profile-img_1a1a1a.jfif" alt="Clarice Wilson">
+                    </div>
+                    <div class="contact-name"><h2>Clarice</h2></div>
+                    <div class="contact-options"><a href="tel:8608373169"><i class="fas fa-phone"></i></a></div>
+
+                </div>
+            </li>
+            <li>
+                <div class="contact-card">
+                    <div class="contact-profile-image">
+                        <img src="./assets/images/profile/davon-colon_profile-img_1a1a1a.png" alt="Davon Colon">
+                    </div>
+                    <div class="contact-name"><h2>Davonci</h2></div>
+                    <div class="contact-options"><a href="tel:8608341624"><i class="fas fa-phone"></i></a></div>
+
+                </div>
+            </li>
+            <li>
+                <div class="contact-card">
+                    <div class="contact-profile-image">
+                        <img src="./assets/images/profile/user-profile_trell_1a1a1a.jpg" alt="Default User Avatar">
+                    </div>
+                    <div class="contact-name"><h2>Trell</h2></div>
+                    <div class="contact-options"><a href="tel:8603917792"><i class="fas fa-phone"></i></a></div>
+
+                </div>
+            </li>
+            <li>
+                <div class="contact-card">
+                    <div class="contact-profile-image">
+                        <img src="./assets/images/profile/jonathan-dillon_profile-img_1a1a1a.jfif" alt="Jonathan Dillon">
+                    </div>
+                    <div class="contact-name"><h2>Jon D</h2></div>
+                    <div class="contact-options"><a href="tel:8603068465"><i class="fas fa-phone"></i></a></div>
+
+                </div>
+            </li>
+            <li>
+                <div class="contact-card">
+                    <div class="contact-profile-image">
+                        <img src="./assets/images/profile/default_profile-img_1a1a1a.png" alt="Default User Avatar">
+                    </div>
+                    <div class="contact-name"><h2>Corey</h2></div>
+                    <div class="contact-options"><a href="tel:8606708892"><i class="fas fa-phone"></i></a></div>
+
+                </div>
+            </li>
+            <li>
+                <div class="contact-card">
+                    <div class="contact-profile-image">
+                        <img src="./assets/images/profile/mark-thompson_profile-img_1a1a1a.jfif" alt="">
+                    </div>
+                    <div class="contact-name"><h2>Techson</h2></div>
+                    <div class="contact-options"><a href="tel:860"><i class="fas fa-phone"></i></a></div>
+
+                </div>
+            </li>
+            <li>
+                <div class="contact-card">
+                    <div class="contact-profile-image">
+                        <img src="./assets/images/profile/roxana-milea_profile-img_1a1a1a.jfif" alt="Roxana Milea">
+                    </div>
+                    <div class="contact-name"><h2>Roxy</h2></div>
+                    <div class="contact-options"><a href="tel:860"><i class="fas fa-phone"></i></a></div>
+
+                </div>
+            </li>
+            <li>
+                <div class="contact-card">
+                    <div class="contact-profile-image">
+                        <img src="./assets/images/profile/daniel-santos_profile-img_1a1a1a.jfif" alt="Daniel Santos">
+                    </div>
+                    <div class="contact-name"><h2>Daniel</h2></div>
+                    <div class="contact-options"><a href="tel:"><i class="fas fa-phone"></i></a></div>
+
+                </div>
+            </li>
+            <li>
+                <div class="contact-card">
+                    <div class="contact-profile-image">
+                        <img src="./assets/images/profile/jess-samuels_profile-img_1a1a1a.jfif" alt="Jess Samuels">
+                    </div>
+                    <div class="contact-name"><h2>Jess</h2></div>
+                    <div class="contact-options"><a href="tel:"><i class="fas fa-phone"></i></a></div>
+
+                </div>
+            </li>
+           
+            <li>
+                <div class="contact-card">
+                    <div class="contact-profile-image">
+                        <img src="./assets/images/profile/default_profile-img_1a1a1a.png" alt="Default User Avatar">
+                    </div>
+                    <div class="contact-name"><h2>Serg</h2></div>
+                    <div class="contact-options"><a href="tel:6173040804"><i class="fas fa-phone"></i></a></div>
+
+                </div>
+            </li>
+            <li>
+                <div class="contact-card">
+                    <div class="contact-profile-image">
+                        <img src="./assets/images/profile/default_profile-img_1a1a1a.png" alt="Default User Avatar">
+                    </div>
+                    <div class="contact-name"><h2>Andrew</h2></div>
+                    <div class="contact-options"><a href="tel:6173040804"><i class="fas fa-phone"></i></a></div>
+
+                </div>
+            </li>
+            
+        </ul>
+    </div>
+</div>
+
 
 
 
@@ -88,7 +233,7 @@ Note 10+ - 2930x1440
 
 <!--  CELL PHONE SIZES END -->
 
-    <a-scene
+    <a-scene style="background: transparent; backface-visibility: visible;"
     loading-screen="dotsColor: lightskyblue; backgroundColor: black"
         vr-mode-ui="enabled: true" embedded
         arjs='sourceType: webcam; sourceWidth:3840; sourceHeight:2160; displayWidth: 2930; displayHeight: 1440; debugUIEnabled: false;'
