Added test pins

--- a/spreadgolf.html
+++ b/spreadgolf.html
@@ -109,12 +109,12 @@ Note 10+ - 2930x1440
     </a-entity>
 
     <!-- TEST -->
-    <a-entity look-at="#cam" gps-entity-place="latitude: 28.865836; longitude: -81.953712" scale="3 3 3">
-        <a-text value="Palmetto" scale="8 8 8" position="0 6 0" color="#ffc300"></a-text>
-        <a-text value="Starter Shack" scale="2 2 2" position="0 2 0" color="#ffffff"></a-text>
+    <a-entity look-at="#cam" gps-entity-place="latitude: 41.603799; longitude: -72.679658" scale="3 3 3">
+        <a-text value="Dumpster Diving" scale="8 8 8" position="0 6 0" color="#ffc300"></a-text>
+        <a-text value="Recycling Center" scale="2 2 2" position="0 2 0" color="#ffffff"></a-text>
     </a-entity>
         <!-- TEST HOLE -->
-        <a-entity look-at="#cam" gps-entity-place="latitude: 28.866152; longitude: -81.953442" scale="3 3 3">
+        <a-entity look-at="#cam" gps-entity-place="latitude: 41.604288; longitude: -72.680362" scale="3 3 3">
             <a-text value="Tee 1" scale="4 4 4" position="0 4 0" color="#ffffff"></a-text>
             <a-text value="Par 3" scale="2 2 2" position="0 2 0" color="#ffffff"></a-text>
             <a-image src="#tee"></a-image>
